--- a/smartBrain/src/App.css
+++ b/smartBrain/src/App.css
@@ -1,30 +1,14 @@
 .center {
   display: flex;
   justify-content: center;
-}
+};
 
 html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-}
-
-#tsparticles {
-  position: fixed !important;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  pointer-events: none;
-}
-
-#tsparticles canvas {
-  display: block;
-  width: 100% !important;
-  height: 100% !important;
-}
+};
 
 
 /* #root {
